Many bug fixes (Bugs found with "FindBugs", still 181 Warnings left)
git-svn-id: https://faracvs.cs.uni-magdeburg.de/svn/tthuem-FeatureIDE/trunk@1568 272fd0a3-3bb5-487d-978a-b927a3a9602e